--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1,6 +1,8 @@
 body
 {
     background: #000;
+    box-sizing: border-box;
+    position: relative;
 }
 
 .container-image
@@ -11,5 +13,35 @@ body
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.nav
+{
+    width: 33%;
+    height: 70px;
+    /* background: white; */
+    position: absolute;
+    top: 0;
+    left: 60px;
+}
+
+.nav .links
+{
+    width: 100%;
+    /* background: purple; */
+    height: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav .links .link
+{
+    font-size: 25px;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
