--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -5,21 +5,10 @@ body
     position: relative;
 }
 
-.container-image
-{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .nav
 {
     width: 33%;
     height: 70px;
-    /* background: white; */
     position: absolute;
     top: 0;
     left: 60px;
@@ -28,7 +17,6 @@ body
 .nav .links
 {
     width: 100%;
-    /* background: purple; */
     height: 70px;
     display: flex;
     flex-direction: row;
@@ -43,5 +31,28 @@ body
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.container-image
+{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-social
+{
+    width: 16.5%;
+    height: 70px;
+    position: absolute;
+    bottom: 0;
+    left: 43%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
