--- a/sources/css/styleproject.css
+++ b/sources/css/styleproject.css
@@ -14,5 +14,28 @@ body
     width: 1800px;
     height: 800px;
     background: #ffffff;
+    position: relative;
+}
+
+.container .letters
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: absolute;
+    top: 45%;
+    left: 40%;
+    /* width: 1000px;
+    height: 455px; */
+    font-size: 500px;
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.container .letters .letter
+{
+    
 }
 
