--- a/sources/css/stylehome.css
+++ b/sources/css/stylehome.css
@@ -3,6 +3,7 @@ body
     background: #000;
     box-sizing: border-box;
     position: relative;
+    overflow: hidden;
 }
 
 .nav
@@ -31,7 +32,9 @@ body
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     text-transform: uppercase;
+    animation: slidein 3s ease-in-out;
 }
+
 
 .container-image
 {
@@ -48,7 +51,6 @@ body
     padding: 20px;
     width: 450px;
     height: 250px;
-    /* background: #0000004d; */
     position: absolute;
     top: 20%;
     left: 70%;
@@ -61,6 +63,8 @@ body
     color: #000000;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
+    animation: slideout 3s ease-in-out;
+
 }
 
 .card-id .title
@@ -70,6 +74,8 @@ body
     color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
+    animation: opacity 6s ease-in-out;
+
 }
 
 .card-id .button-home
@@ -83,6 +89,7 @@ body
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     text-transform: uppercase;
+    animation: opacity 4s ease-in-out;
 }
 
 .card-id .button-home a
@@ -101,5 +108,6 @@ body
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    animation: opacity 4s ease-in-out;
 }
 
