--- a/sources/css/styleproject.css
+++ b/sources/css/styleproject.css
@@ -1,6 +1,7 @@
 *
 {
     box-sizing: border-box;
+    /* overflow: hidden; */
 }
 
 body
@@ -25,10 +26,10 @@ body
 .container .letters
 {
     z-index: 2;
-position: absolute;
-top: 56%;
-left: 50%;
-cursor: default;
+    position: absolute;
+    top: 56%;
+    left: 50%;
+    cursor: default;
 }
 
 .container .letters .letter
@@ -59,6 +60,9 @@ cursor: default;
     width: 430px;
     height: 390px;
     background: #b25555;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container .square-2
@@ -94,9 +98,79 @@ cursor: default;
     background: #7b4545;
 }
 
+
+.container .link-project
+{
+    /* background: #ff00ff; */
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding-top: 45%;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    font-weight: 900;
+    color: #000000;
+    text-transform: uppercase;
+    opacity: 0.5;
+}
+
 .container .burger-menu
 {
-    
+    position: absolute;
+    left: 1730px;
+    width: 70px;
+    height: 70px;
+    background: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .burger-menu a
+{
+    padding: 15px;
+}
+
+.burger-container
+{
+    width: 200px;
+    height: 300px;
+    position: absolute;
+    z-index: 10;
+    right: 0;
+    top: 0;
+    background: #2b2929;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.burger-container .links
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.burger-container .links .link
+{
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: 900;
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    height: 20px;
+    width: 100%;
+    text-align: center;
+}
+
+.burger-container .links .link:not(:first-child)
+{
+    margin-top: 40px;
 }
 
 .container-social
