--- a/sources/css/stylehome.css
+++ b/sources/css/stylehome.css
@@ -46,6 +46,19 @@ body
     align-items: center;
 }
 
+.container-image .home-image
+{
+    opacity: 0;
+    transition-property: opacity;
+    transition-duration: 3s;
+    will-change: transform;
+}
+
+.container-image .home-image.loaded
+{
+    opacity: 1;
+}
+
 .card-id
 {
     padding: 20px;
@@ -74,7 +87,7 @@ body
     color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
-    animation: opacity 6s ease-in-out;
+    animation: opacity 5s ease-in-out;
 
 }
 
@@ -89,7 +102,7 @@ body
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     text-transform: uppercase;
-    animation: opacity 4s ease-in-out;
+    animation: opacity 5s ease-in-out;
 }
 
 .card-id .button-home a
@@ -108,6 +121,8 @@ body
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    animation: opacity 4s ease-in-out;
+    animation: opacity 6s ease-in-out;
 }
+
+
 
