--- a/sources/css/styleproject.css
+++ b/sources/css/styleproject.css
@@ -1,7 +1,7 @@
 *
 {
     box-sizing: border-box;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 body
@@ -30,6 +30,8 @@ body
     top: 56%;
     left: 50%;
     cursor: default;
+    animation: bounce 2s alternate ;
+
 }
 
 .container .letters .letter
@@ -51,6 +53,20 @@ body
     font-weight: 900;
     text-transform: uppercase;
     cursor: default;
+    animation: slidein 2s ease-in-out;
+}
+
+.container .chapter
+{
+    opacity: 0;
+    transition-property: opacity;
+    transition-duration: 3s;
+    will-change: transform;
+}
+
+.container .chapter.loaded
+{
+    opacity: 1;
 }
 
 .container .square-1
