--- a/sources/css/stylehome.css
+++ b/sources/css/stylehome.css
@@ -28,11 +28,24 @@ body
 .nav .links .link
 {
     font-size: 25px;
-    color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     text-transform: uppercase;
     animation: slidein 3s ease-in-out;
+    text-align: center;
+    color: #ffffff;
+    background: linear-gradient(to right, #ff0000, #ff0000 50%, #ffffff 50%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% 100%;
+    background-position: 100%;
+    transition: background-position 300ms ease-in-out;
+}
+
+.nav .links .link:hover
+{
+    background-position: 0 100%;
 }
 
 
@@ -108,6 +121,20 @@ body
 .card-id .button-home a
 {
     padding: 15px 25px;
+    text-align: center;
+    color: #ffffff;
+    background: linear-gradient(to right, #ff0000, #ff0000 50%, #ffffff 50%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% 100%;
+    background-position: 100%;
+    transition: background-position 300ms ease-in-out;
+}
+
+.card-id .button-home a:hover
+{
+    background-position: 0 100%;
 }
 
 .container-social
