--- a/sources/css/stylehome.css
+++ b/sources/css/stylehome.css
@@ -1,9 +1,15 @@
 body
 {
+    width: 100vw;
+    height: 100vh;
     background: #000;
     box-sizing: border-box;
     position: relative;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav
@@ -11,8 +17,8 @@ body
     width: 33%;
     height: 70px;
     position: absolute;
-    top: 0;
-    left: 60px;
+    top: -70px;
+    left: 0;
 }
 
 .nav .links
@@ -51,8 +57,9 @@ body
 
 .container-image
 {
-    width: 100vw;
-    height: 100vh;
+    position: relative;
+    width: 1800px;
+    height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -61,6 +68,8 @@ body
 
 .container-image .home-image
 {
+    width: 1800px;
+    height: 800px;
     opacity: 0;
     transition-property: opacity;
     transition-duration: 3s;
@@ -142,7 +151,7 @@ body
     width: 10%;
     height: 70px;
     position: absolute;
-    bottom: 0;
+    bottom: -70px;
     left: 45%;
     display: flex;
     flex-direction: row;
