--- a/sources/css/responsivehome.css
+++ b/sources/css/responsivehome.css
@@ -6,13 +6,15 @@
         width: 1000px;
         height: 444px;
     }
+
     .container-image .home-image
     {
         width: 1000px;
         height: 444px;
     }
 
-    .nav {
+    .nav
+    {
         width: 50%;
         height: 70px;
         top: -16%;
@@ -33,25 +35,31 @@
         left: 70%;
     }
 
-    .card-id .name {
+    .card-id .name
+    {
         padding-bottom: 10px;
         font-size: 30px;;
     }
 
-    .card-id .title {
+    .card-id .title
+    {
         font-size: 20px;
     }
 
-    .card-id .button-home {
+    .card-id .button-home
+    {
         height: 35px;
         width: 100px;
         font-size: 12px;
     }
-    .card-id .button-home a {
+
+    .card-id .button-home a
+    {
         padding: 15px 15px;
     }
 
-    .container-social {
+    .container-social
+    {
         width: 15%;
         height: 70px;
         bottom: -70px;
